--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
