--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.2",
     "axios": "^1.3.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
