--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "cssnano": "^6.0.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
