--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-separator": "^1.0.2",
     "axios": "^1.3.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "cssnano": "^6.0.0",
+    "date-fns": "^2.29.3",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
