--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet-async": "^1.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
+    "react-web-share": "^2.0.2",
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
