--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
     "react-helmet-async": "^1.3.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-web-share": "^2.0.2",
