--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-web-share": "^2.0.2",
-    "tailwind-merge": "^1.12.0"
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
